# PsiKit

./: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
core/: build.gradle  build.gradle.kts  settings.gradle.kts
core/logs/: testLog.rlog
core/src/main/java/org/psilynx/psikit/core/: AutoLog.java  AutoLogOutput.java  AutoLogOutputManager.java  ConsoleSource.java  ConsoleSourceImpl.java  LogDataReceiver.java  LogReplaySource.java  LogTable.java  LoggableInputs.java  LoggedNetworkInput.java  Logger.java  Pair.java  RLOGReplay.java  ReceiverThread.java
core/src/main/java/org/psilynx/psikit/core/io/: BitUtils.java  LogDataReceiver.java  LogFileUtil.java  RLOGDecoder.java  RLOGEncoder.java  RLOGServer.java  RLOGWriter.java  Schema.java  StructDecoder.java  ValueSchema.java  ValueType.kt
core/src/main/java/org/psilynx/psikit/core/mechanism/: LoggedMechanism2d.java  LoggedMechanismLigament2d.java  LoggedMechanismObject2d.java  LoggedMechanismRoot2d.java
core/src/main/java/org/psilynx/psikit/core/rlog/: RLOGDecoder.java  RLOGEncoder.java  RLOGReplay.java  RLOGServer.java  RLOGWriter.java
core/src/test/java/test/: LogFileTest.java  LoggerTest.java  RLOGRoundTripTest.java  TestInput.java  TestServer.kt
docs/: README.md  _coverpage.md  _sidebar.md  changelog.md  compare.md  ftc-autolog-examples.md  ftc-logging-tuning-reference.md  index.html  installAscope.md  installing.md  replay.md  supported.md  usage.md  work-summary-2026-01-08.md
docs/gradle/org/psilynx/PsiKit/: maven-metadata.xml
docs/gradle/org/psilynx/PsiKit/0.0.4/: PsiKit-0.0.4.jar.md5  PsiKit-0.0.4.module  PsiKit-0.0.4.module.sha1  PsiKit-0.0.4.module.sha256  PsiKit-0.0.4.pom  PsiKit-0.0.4.pom.sha256
docs/gradle/org/psilynx/psikit/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
docs/gradle/org/psilynx/psikit/0.0.1/: psikit-0.0.1.jar.md5  psikit-0.0.1.jar.sha1  psikit-0.0.1.jar.sha256  psikit-0.0.1.jar.sha512  psikit-0.0.1.module  psikit-0.0.1.module.md5  psikit-0.0.1.module.sha1  psikit-0.0.1.module.sha256  psikit-0.0.1.module.sha512  psikit-0.0.1.pom  psikit-0.0.1.pom.md5  psikit-0.0.1.pom.sha1  psikit-0.0.1.pom.sha256  psikit-0.0.1.pom.sha512
docs/gradle/org/psilynx/psikit/0.0.2/: psikit-0.0.2.jar.md5  psikit-0.0.2.jar.sha1  psikit-0.0.2.jar.sha256  psikit-0.0.2.jar.sha512  psikit-0.0.2.module  psikit-0.0.2.module.md5  psikit-0.0.2.module.sha1  psikit-0.0.2.module.sha256  psikit-0.0.2.module.sha512  psikit-0.0.2.pom  psikit-0.0.2.pom.md5  psikit-0.0.2.pom.sha1  psikit-0.0.2.pom.sha256  psikit-0.0.2.pom.sha512
docs/gradle/org/psilynx/psikit/0.0.4/: PsiKit-0.0.4.jar.sha1  PsiKit-0.0.4.jar.sha256  PsiKit-0.0.4.jar.sha512  PsiKit-0.0.4.module.md5  PsiKit-0.0.4.module.sha512  PsiKit-0.0.4.pom.md5  PsiKit-0.0.4.pom.sha1  PsiKit-0.0.4.pom.sha512
ftc/: build.gradle  build.gradle.kts  testLog.rlog
ftc/src/main/java/org/psilynx/psikit/ftc/: DriverStationLogger.kt  FakeLynxGetBulkInputDataResponse.kt  FtcLogTuning.kt  FtcLoggingSession.kt  GoBildaPinpointDriver.java  HardwareMapInput.kt  HardwareMapWrapper.kt  MockI2cDeviceSyncSimple.kt  OpModeControls.kt  PinpointOdometryLogger.kt  PsiKitLinearOpMode.kt  PsiKitOpMode.kt  PsikitOpmode.kt  Replay.kt  StructPoseInputs.kt
ftc/src/test/java/org/psilynx/psikit/ftc/: TestHardwareInput.kt
gradle/: libs.versions.toml
java/: build.gradle
java/src/main/java/org/psilynx/psikit/: ConsoleSource.java  LogFileUtil.java  LogTable.java  Logger.java  RLOGServer.java  WPILOGReader.java  WPILOGWriter.java
java/src/main/java/org/psilynx/psikit/wpi/: CombinedRuntimeLoader.java  DataLogJNI.java  DataLogWriter.java  MsvcRuntimeException.java  RuntimeLoader.java  WPIUtilJNI.java
java/src/test/java/org/psilynx/psikit/: LoggerTest.java  WPILOGWriterTest.java
logs/: testLog.rlog
native/: build.gradle
native/src/main/cpp/: enumerate.py
native/src/main/cpp/google/protobuf/: any.h  arena.h  arena_impl.h  arenastring.h  arenaz_sampler.h  descriptor.h  descriptor.pb.h  descriptor_database.h  dynamic_message.h  endian.h  explicitly_constructed.h  extension_set.h  generated_enum_reflection.h  generated_enum_util.h  generated_message_reflection.h  generated_message_util.h  has_bits.h  implicit_weak_message.h  inlined_string_field.h  map.h  map_type_handler.h  message.h  message_lite.h  metadata_lite.h  parse_context.h  reflection.h  repeated_field.h  repeated_ptr_field.h  unknown_field_set.h  wire_format_lite.h
native/src/main/cpp/jni/: DataLogJNI.cpp  WPIUtilJNI.cpp  org_psilynx_psikit_wpi_DataLogJNI.h  org_psilynx_psikit_wpi_WPIUtilJNI.h
native/src/main/cpp/wpi/: SmallVector.h  align.hpp  assert.hpp  free_list_array.hpp
native/src/main/cpp/wpi/protobuf/: Protobuf.cpp  Protobuf.h  ProtobufCallbacks.h  ProtobufMessageDatabase.h
rr/: build.gradle
rr/src/main/java/org/psilynx/psikit/rr/: RRLogPsiKitDataReceiver.kt
sim/: build.gradle
sim/src/androidTest/java/org/psilynx/psikit/ftc/: ExampleInstrumentedTest.kt
sim/src/main/java/org/psilynx/psikit/sim/: FakeTimer.kt
sim/src/test/java/org/psilynx/psikit/ftc/: ExampleUnitTest.kt
src/main/java/org/psilynx/psikit/: AutoLogOutputManager.java  ConsoleSourceImpl.java  LogSocketServer.java  LogTable.java  LoggableInputs.java  Logger.java  Pair.java  RLOGReplay.java  ReceiverThread.java  SimConsoleSource.java
src/main/java/org/psilynx/psikit/io/: BitUtils.java  LogDataReceiver.java  LogFileUtil.java  RLOGDecoder.java  RLOGEncoder.java  RLOGServer.java  RLOGWriter.java  Schema.java  StructDecoder.java  ValueSchema.java  ValueType.kt
src/main/java/org/psilynx/psikit/rlog/: ByteDecoder.java  ByteEncoder.java  ByteLogReceiver.java  ByteLogReplay.java  LogDataReceiver.java  LogRawDataReceiver.java  LogReplaySource.java  RLOGEncoder.java  RLOGServer.java
src/test/java/test/: LogFileTest.java  LoggerTest.java  TestInput.java  TestInputs.java
test/: build.gradle  build.gradle.kts  settings.gradle
test/src/test/java/org/psilynx/psikit/test/: ExampleUnitTest.kt
(+127 files in other folders)
